[package]
name = "tokemak-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version =  "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
log = "0.4"
ethers = { git = "https://github.com/gakonst/ethers-rs" }
thiserror = "1.0"
serde = "1.0.136"
serde_json = "1.0"
url = "2.2.2"
rustc-hex = "2.1.0"
rust_decimal = "1.23"
rust_decimal_macros = "1.23"
eyre = "0.6.8"
urlencoding = "2.1.0"
derive-new = "0.5"
derive-getters = "0.2.0"
